--- a/package.json
+++ b/package.json
@@ -21,9 +21,11 @@
     "@nuxtjs/eslint-module": "^3.0.2",
     "@supabase/supabase-js": "^1.27.0",
     "@vue-hero-icons/outline": "^1.7.2",
+    "cookie-parser": "^1.4.5",
     "eslint": "^7.29.0",
     "eslint-plugin-nuxt": "^2.0.0",
     "eslint-plugin-vue": "^7.12.1",
+    "express": "^4.17.1",
     "nuxt-windicss": "^2.0.0"
   }
 }
