--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "cookie-parser": "^1.4.5",
     "core-js": "^3.15.1",
     "express": "^4.17.1",
+    "node-gyp": "^8.4.0",
     "nuxt": "^2.15.7"
   },
   "devDependencies": {
