--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "exam-storerv2",
+  "name": "vrchat-storagev2",
   "version": "1.0.0",
   "private": true,
   "scripts": {
@@ -7,27 +7,32 @@
     "build": "nuxt build",
     "start": "nuxt start",
     "generate": "nuxt generate",
-    "vercel-build": "yarn global add node-gyp",
     "lint:js": "eslint --ext \".js,.vue\" --ignore-path .gitignore .",
-    "lint": "yarn lint:js"
+    "lint": "yarn lint:js",
+    "vercel-build": "yarn global add node-gyp-build"
   },
   "dependencies": {
     "@nuxtjs/axios": "^5.13.6",
-    "@supabase/supabase-js": "^1.27.0",
+    "@supabase/supabase-js": "^1.24.0",
+    "@vue-hero-icons/outline": "^1.7.2",
+    "cheerio": "^1.0.0-rc.10",
     "cookie-parser": "^1.4.5",
     "core-js": "^3.15.1",
     "express": "^4.17.1",
-    "node-gyp": "^8.4.0",
-    "nuxt": "^2.15.7"
+    "nuxt": "^2.13.3",
+    "nuxt-supabase": "^2.1.0",
+    "vue-click-outside": "^1.1.0",
+    "vue-slick-carousel": "^1.0.6",
+    "vuex-persistedstate": "^4.1.0"
   },
   "devDependencies": {
     "@babel/eslint-parser": "^7.14.7",
     "@nuxtjs/eslint-config": "^6.0.1",
     "@nuxtjs/eslint-module": "^3.0.2",
-    "@vue-hero-icons/outline": "^1.7.2",
     "eslint": "^7.29.0",
     "eslint-plugin-nuxt": "^2.0.0",
     "eslint-plugin-vue": "^7.12.1",
-    "nuxt-windicss": "^2.0.0"
+    "nuxt-animejs": "^1.2.2",
+    "nuxt-windicss": "2.0.6"
   }
 }
