--- a/package.json
+++ b/package.json
@@ -22,8 +22,7 @@
     "nuxt": "^2.13.3",
     "nuxt-supabase": "^2.1.0",
     "vue-click-outside": "^1.1.0",
-    "vue-slick-carousel": "^1.0.6",
-    "vuex-persistedstate": "^4.1.0"
+    "vue-slick-carousel": "^1.0.6"
   },
   "devDependencies": {
     "@babel/eslint-parser": "^7.14.7",
@@ -33,6 +32,7 @@
     "eslint-plugin-nuxt": "^3.0.0",
     "eslint-plugin-vue": "^8.1.1",
     "nuxt-animejs": "^1.2.2",
+    "nuxt-swc": "^0.1.0",
     "nuxt-windicss": "2.0.12"
   }
 }
